# bot_discord_ia_lastwar

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start_airflow.sh
.astro/: config.yaml
.github/workflows/: ci.yaml
dags/: add_files_gemini.py  exampledag.py  remove_gemini_files.py
src/: main.py  teste.py  utils.py
tests/: test_scraping_creates_files.py
